fix input length on mobile

--- a/src/components/InputSearch.module.scss
+++ b/src/components/InputSearch.module.scss
@@ -9,7 +9,7 @@
 input {
   position: absolute;
   top: 180px;
-  width: calc(100% - 30px);
+  width: calc(100% - 60px);
   height: 45px;
   padding-left: 40px;
   border: none;
